# byzfl

./: .gitignore  pyproject.toml
byzfl/aggregators/: aggregators.py
byzfl/attacks/: attacks.py
byzfl/benchmark/: benchmark.py  evaluate_results.py  managers.py  measures.py  train.py
byzfl/fed_framework/: __init__.py  client.py  data_distributor.py  models.py  poisoning_client.py  server.py
byzfl/poisoning/: attacks.py
byzfl/utils/: misc.py
tests/: run_all_tests.py  unit_test_benchmark.py
