[project]
name = "byzfl"
version = "0.1.0"
description = "ByzFL: A Python library for robust federated learning, offering Byzantine-resilient aggregators, attack simulations, and ML pipelines for distributed systems. Compatible with PyTorch and NumPy."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.8.3",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "scikit-learn>=1.7.2",
]
